[package]
name = "cryptid_squad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
glium = {version = "0.33.0", features = ["glutin"]}
winit = "^0.28"

tokio = {version = "1.35.1", features = ["full"]}
